Thu Mar  1 19:06:33 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleList.h:
        * dds/DCPS/DataSampleList.inl:
        * dds/DCPS/DataWriterImpl.cpp:

          Go back to the earlier (pre-RTPS-merge) strategy of using the same
          sequence number for durability resends.

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:

          Write durability data to a particular reader GUID,
          and use the same sequence number as the original send.
          Allocate the DataSampleListElement on the heap, since (once the
          transport gets support for it) the TransportSendElement could
          be held after the send() returns.

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:

          Removed OriginalWriterInfo, it's no longer needed since the
          sequence numbers are the same for durability resends.
          Get initial QoS values from TheServiceParticipant.

Thu Mar  1 14:10:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixing genhtml prefix removal.

Wed Feb 29 20:03:51 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

        Removing some verbose logging.

Wed Feb 29 18:56:26 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Spdp.cpp:

          More changes for interoperability:
          - Send the "key" in the SPDP dispose/unregister message
          - Better support for skipping unrecognized data received on SPDP

Wed Feb 29 15:00:12 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Cleanup whitespace.

Tue Feb 28 19:20:55 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Removing prefix for generated coverage html.

Tue Feb 28 17:01:00 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Script for processing DDS coverage data with lcov.
