@@ -1,3 +1,9 @@
+Thu Mar  1 19:13:47 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tools/scripts/lcov.pl:
+
+          Added ability to only run coverage on certain build days.
+
 Thu Mar  1 19:06:33 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/DataSampleList.h:
